recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:9: error: reassignment to val
		steps=steps-1
                     ^