recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {

	if(steps!=0){
		var l:Int=length
		var i:Int=increment
		avance(l)
		gauche(angle)
		steps=steps-1
		l=l+i
		spiral(steps,angle,l,i)
	}
	else{
		avance(length)
		gauche(angle)
	}
}
